--- a/Views/Admin/Course/CourseList.html
+++ b/Views/Admin/Course/CourseList.html
@@ -21,7 +21,7 @@
     <div class="row" style="padding: 10px;background: #e5e5e5">
         <div class="col-xs-6 text-left">
             <h4><strong>课程管理</strong></h4>
-        </div>
+        </div>、
         <div class="col-xs-6 text-right">
             <input type="text" class="input" style="width: 60%" id="SearchKey" placeholder="请输入搜索关键字"/>
             <button class="button70X30" id="btnSearch">搜 索</button>
