--- a/Views/Admin/Phase/PhaseEdit.html
+++ b/Views/Admin/Phase/PhaseEdit.html
@@ -89,6 +89,18 @@
         </div>
     </div>
     <div class="row">
+        <div class="col-xs-2">课程说明：</div>
+        <div class="col-xs-6">
+            <select type="text" id="CourseDec">
+                <option value="无">无</option>
+                <option value="播种之旅">播种之旅</option>
+                <option value="蜕变之旅">蜕变之旅</option>
+                <option value="摩英智慧家长+超级记忆力">摩英智慧家长+超级记忆力</option>
+                <option value="摩英性格分析+学习力特训营">摩英性格分析+学习力特训营</option>
+            </select>
+        </div>
+    </div>
+    <div class="row">
         <div class="col-xs-2">人数上限：</div>
         <div class="col-xs-6"><input class="input" type="text" id="PeopleCount"/></div>
     </div>
