--- a/Views/book/Sign_UnReg.html
+++ b/Views/book/Sign_UnReg.html
@@ -159,53 +159,26 @@
         </div>
     </div>
     <div class="row mgt8">
-        <div class="col-xs-12">
+        <div class="">
             <img src="../../Images/serviceImg/p_01.png"/>
         </div>
     </div>
     <div class="row mgt8">
-        <div class="col-xs-12">
-            <video controls="controls" width="100%">
-               <source src="../../Res/Video/video1.mp4">
-            </video>
-        </div>
+        <div class="col-xs-12"><img src="../../Images/serviceImg/p_019.jpg"/></div>
     </div>
     <div class="row mgt8">
         <div class="col-xs-12">
-            <h4 style="background: rgb(0, 176, 240);color:rgb(255, 255, 0);font-size: 20px">镜头可以回放 人生无法重来</h4>
-            <div style="margin-top: 10px">家长常常会问：</div>
-            <div style="line-height: 25px">我的孩子经历了这么棒的集训营，</div>
-            <div style="color: rgb(0, 176, 80);line-height: 25px">如何给到他持续的激励、鼓舞？</div>
-            <div style="line-height: 20px">那么多精彩蜕变瞬间我却缺席不在，</div>
-            <div style="color: rgb(0, 176, 80);line-height: 25px">如何留下这些感动蜕变瞬间？</div>
+            <div style="background: #000">
+                <video controls="controls" width="100%">
+                    <source src="../../Res/Video/video1.mp4">
+                </video>
+            </div>
         </div>
     </div>
     <div class="row mgt8">
-        <div class="col-xs-12">
-            <video controls="controls" width="100%">
-                <source src="../../Res/Video/video2.mp4">
-            </video>
-        </div>
+        <img src="../../Images/serviceImg/guanhe.png"/>
     </div>
-    <div class="row mgt8">
-        <div class="col-xs-12">
-            <div>
-                <label style="color: red">“观禾影视文化传媒”</label>为您带来
-                <label style="color: red">最佳解决方案！</label>
-                <label>帮你把摩英集训营打包带回家！~</label>定格蜕变成长瞬间！ 持续放大摩英效应！ 让您的孩子成为
-                <label style="color:red">“变形计”</label>大片主角！！
-            </div>
-            <div style="margin-top: 10px;">
-                <label>摩英教育全系课程</label> 强势推出
-                <label style="color: #ff0000;"> 360°蜕变全记录</label>
-                影视定制产品，为您的孩子个性化定制一份专属于他的精彩回忆，一份见证孩子感动、蜕变成长的蓝光高清纪录片，纯净第三方视角真实记录，这将是您给孩子最好的成长礼物！
-            </div>
-            <div style="margin-top: 10px;">
-                <span style="color:rgb(0, 176, 80)">每一次的成长，每一次的感动，每一次的蜕变，用镜头记录下来，将瞬间变为永恒。</span>
-                五年、十年后，回头来看，这份青春成长的回忆对孩子的价值是无法用金钱来衡量的!
-            </div>
-        </div>
-    </div>
+
     <div class="row mgt8">
         <div class="col-xs-12">
             <img src="../../Images/serviceImg/p_02.png"/>
@@ -223,34 +196,17 @@
     </div>
     <div class="row mgt8">
         <div class="col-xs-12">
-            <span style="font-size: 24px;color: rgb(0, 112, 192); ">360°蜕变全记录 系列产品</span>
-            <div style="margin-top: 10px">
-                <label style="color:red;">定制产品以微电影的风格结合记录片的形式，</label>
-                为您完美的保留孩子青春蜕变的恒久记忆，绝对比《爸爸去哪儿》更精彩哦！因为主角就是您的孩子！
+            <div style="margin-top: 10px;">
+                <label>摩英教育全系课程</label> 全心力作
+                <label style="color: #ff0000;"> 360°蜕变全记录</label>
+                影视定制产品，为您的孩子个性化定制一份专属于他的精彩回忆，一部见证孩子感动、蜕变成长的个人专属纪录片，纯净第三方视角真实记录，这将是您给孩子最好的成长礼物！
+                五年、十年后，回头来看，这份青春成长的回忆对孩子的价值是无法用金钱来衡量的!再忙忙不过时间,再美美不过光阴！
             </div>
-            <h4 style="background: rgb(0, 176, 240);color:rgb(255, 255, 0);font-size: 20px;line-height: 24px;">
-                摩英<span style="color:#fff;">统一版</span>回忆视频
-            </h4>
-            7天全程记录，最后成片时长60分钟，由专业摄像团队+资深剪辑师倾力打造统一版回忆视频，
-            <label>最后刻录成1920x1080FHD蓝光高清D9光盘</label>
-            <h4 style="background: rgb(0, 176, 240);color:rgb(255, 255, 0);font-size: 20px;line-height: 24px;">
-                VIP摩英大电影<span style="color:#fff;">(个性定制)</span>
-            </h4>
-            从入营报到直到结营离开酒店，专业摄像师全程跟拍，
-            <label>记录学员7天集训生活、学习中的感动绽放瞬间，</label>
-            打造专属于您孩子个人的珍藏青春回忆。并由专业剪辑师后期剪辑成一部
-            <label>60分钟左右的个人MV微电影（1920x1080FHD蓝光高清），</label>
-            给家长一个全新的独特视角了解孩子的世界，为孩子留下一份永久珍藏的励志回忆。
-            <h4 style="background: rgb(0, 176, 240);color:rgb(255, 255, 0);font-size: 20px;line-height: 24px;">
-                VIP蜕变水晶相册<span style="color:#fff;">(个性定制)</span>
-            </h4>
-            专业摄影师全程抓拍，记录学员7天集训营生活、学习中的感动蜕变瞬间，
-            <label>从中精选出120张照片素材留底，再从120张精选照片中精修30张制作一本12寸的水晶相册，并附赠全部留底原始素材及精修成片。</label>
         </div>
     </div>
     <div class="row mgt8">
         <div class="col-xs-12">
-            <img src="../../Images/serviceImg/p_09.png"/>
+            <img src="../../Images/serviceImg/p_016.jpg"/>
         </div>
     </div>
     <div class="row mgt8">
@@ -259,48 +215,83 @@
         </div>
     </div>
     <div class="row mgt8">
-        <div class="col-xs-12">
-            <img src="../../Images/serviceImg/p_07.png"/>
+        <div class="">
+            <img src="../../Images/serviceImg/360quanxilie.png"/>
         </div>
     </div>
     <div class="row mgt8">
         <div class="col-xs-12">
-            <img src="../../Images/serviceImg/p_08.png"/>
+            <div style="border-radius: 15px;color: #fff;background: red;padding: 5px;font-size: 15px;width: 60%;">
+                摩英统一版回忆视频
+            </div>
+            <div>
+                7天全程花絮集锦，成片时长40分钟左右，由观禾影视团队打造，最终刻录成一张1920x1080FHD蓝光高清D9光盘
+            </div>
+            <div style="border-radius: 15px;color: #fff;background: red;padding: 5px;font-size: 15px;width: 70%;">
+                VIP摩英大电影(个性定制)
+            </div>
+            <div>
+                以微电影的风格结合记录片的形式，为您完美封存孩子青春蜕变的恒久记忆，绝对比《爸爸去哪儿》更精彩哦！因为主角就是您的孩子！
+                从入营报到至结营离开酒店，专业摄像师全程跟拍（其间会安排个人专访）记录学员七天集训生活、学习中的感动绽放瞬间，打造专属于您孩子个人的珍藏青春回忆。
+                并由资深剪辑师后期剪辑成一部80分钟左右的个人MV微电影（1920x1080FHD蓝光高清），给家长一个全新的独特视角了解孩子的内心世界，留下一份永久珍藏的励志回忆。
+            </div>
+            <div class="row">
+                <div class="col-xs-12">
+                    <div style="background: #000">
+                        <video controls="controls" width="100%">
+                            <source src="../../Res/Video/video2.mp4">
+                        </video>
+                    </div>
+                </div>
+            </div>
+            <div style="border-radius: 15px;color: #fff;background: red;padding: 5px;font-size: 15px;width: 70%;margin-top: 10px;">
+                VIP蜕变水晶相册(个性定制)
+            </div>
+            <div>
+                专业摄影师全程抓拍，记录学员七天集训营生活、学习中的感动蜕变瞬间，从中精选出120张照片素材留底，
+                再从120张精选照片中精修30张设计制作一本12寸的水晶相册，并附赠全部留底原始素材及精修成片。
+            </div>
         </div>
     </div>
     <div class="row mgt8">
         <div class="col-xs-12">
+            <img src="../../Images/serviceImg/collection.jpg"/>
+            <!--<img src="../../Images/serviceImg/p_07.png"/>-->
+        </div>
+    </div>
+    <div class="row mgt8">
+        <div class="col-xs-12">
+            <img src="../../Images/serviceImg/p_13.png"/>
+        </div>
+    </div>
+    <div class="row mgt8">
+        <div class="">
+            <img src="../../Images/serviceImg/youhui.jpg"/>
+        </div>
+        <div style="padding-left: 30px;padding-right: 20px">
             <div>
-                <label style="background: rgb(255, 255, 0);font-size: 20px;line-height: 24px;">
-                    我们注重的是：
-                </label>
+                <div>订购VIP水晶相册赠送价值398元的:</div>
+                <div style="color: #ff5f98;"> 12寸拉米娜版画、8寸水晶台摆 一套</div>
             </div>
+        </div>
+        <div class="row mgt8">
+            <div class="col-xs-12">
+                <img src="../../Images/serviceImg/p_12.png"/>
+            </div>
+        </div>
+        <div style="padding-left: 30px;padding-right: 20px;margin-top: 8px;">
             <div>
-                <label>純净第三方视角真实记录,</label>
-                让您的孩子化身
-                <label>"变形记"</label>
-                主角，拍摄过程中会采取尽可能隐蔽的拍摄方式，以免打扰孩子正常学习生活的情绪状态。
+                <div>订购VIP大电影的客户赠送价值99元的:</div>
+                <div style="color: #ff5f98;">32G USB3.0 高速品牌U盘一个；</div>
             </div>
-            <div style="margin-top: 10px">
-                集训营的八天中我们会
-                <span style="color:red;">根据学员意愿安排单独视频采访及相关主讲老师、助教采访，</span>
-                <label style="color: red;">探访学员内心世界，</label>
-                传达学员真实想法，在学员与家长之间建立真情流露的沟通渠道。
-            </div>
-            <div style="margin-top: 10px">
-                定制客户的全部视频、照片原始素材均提供为期一年的
-                <label>免费存档</label>
-                服务（自产品订购日起一年内）可供学员及家长随时预约提取。
-            </div>
-            <div style="margin-top: 10px">
-                因个性化定制占用摄制组团队大量的时间和精力，每期集训营
-                <span style="color: red;">每班仅限<label
-                        style="color: red;font-size: 18px;">3个</label>名额，摄影摄像师会时刻关注您的孩子，</span>
-                记录他们在这八天中的幸福、快乐、感动、蜕变……
-            </div>
-            <div style="margin-top: 10px;">
-                <label style="font-size: 16px;">注：名额确定以完款登记时间为准</label>
-            </div>
+        </div>
+    </div>
+
+    <div class="row mgt8">
+        <div class="col-xs-12">
+            純净第三方视角真实记录, 拍摄过程中会采取尽可能隐蔽的拍摄方式，以免打扰孩子正常学习生活的情绪状态。
+            集训营过程中我们会根据学员意愿安排个人专访及相关主讲老师、助教采访， 探访学员内心世界， 传达学员真实想法，在学员与家长之间建立真情流露的沟通渠道。
+            定制客户的全部视频、照片原始素材均提供为期一年的 免费存档 服务（自产品订购日起一年内）可供学员及家长随时预约提取。
         </div>
     </div>
     <div class="row mgt8">
@@ -318,23 +309,10 @@
             <img src="../../Images/serviceImg/p_11.png"/>
         </div>
     </div>
-    <div class="row mgt8">
-        <div class="col-xs-12">
-            <img src="../../Images/serviceImg/p_12.png"/>
-        </div>
-    </div>
-    <div class="row mgt8">
-        <div class="col-xs-12">
-            <img src="../../Images/serviceImg/p_13.png"/>
-        </div>
-    </div>
+
     <div id="ValueAddedServices">
         <div class="row mgt8">
-            <div class="col-xs-12">
-                <h4 style="background: rgb(0, 176, 240);color:rgb(255, 255, 0);font-size: 20px;line-height: 24px;">
-                    <label style="color:rgb(255, 255, 0);">360°蜕变全记录</label>
-                </h4>
-            </div>
+            <img src="../../Images/serviceImg/360tuibian.png"/>
         </div>
         <div class="row mgt8">
             <div class="col-xs-12">
@@ -345,21 +323,19 @@
                 </div>
                 <div>
                     <input type="radio" name="service" value="2"/>VIP摩英大电影：
-                    <label style="color: red;">1980元</label> (单阶7天)
+                    <label style="color: red;">1980元 (单阶七天摄像服务、产品制作)</label>
                 </div>
                 <div>
                     <input type="radio" name="service" value="3"/>VIP蜕变水晶相册：
-                    <label style="color: red;">1280元</label> (单阶7天)
+                    <label style="color: red;">1680元 (单阶七天摄影服务、产品制作)</label>
                 </div>
                 <div>
                     <input type="radio" name="service" value="4"/>VIP摩英大电影+VIP蜕变水晶相册:
-                    <label style="color: red;">2680元</label> (单阶7天)
-                    <label style="color: red;">强烈推荐 性价比极高</label>
+                    <label style="color: red;">2880元(单阶七天) 强烈推荐 性价比极高</label>
                 </div>
                 <div id="DoubleServices">
                     <input type="radio" name="service" value="5"/>VIP摩英大电影+VIP蜕变水晶相册:
-                    <label style="color: red;">3980元</label> （两阶14天）
-                    <label style="color: red;">狂烈推荐 性价比最高</label>
+                    <label style="color: red;">3980元（两阶十四天） 狂烈推荐 性价比最高</label>
                 </div>
                 <div>
                     <input type="radio" name="service" value="0"/>我不需要此项服务
@@ -369,22 +345,23 @@
     </div>
     <div class="row mgt8">
         <div class="col-xs-12">
-            <div style="background-color:rgb(146, 208, 80);color: #FFF; line-height: 24px;font-size: 18px">火爆抢定有惊喜！~
+            <div style="border-radius: 15px;color: #fff;background: red;padding: 5px;font-size: 15px;width: 70%;">
+                火爆抢定有惊喜！~
             </div>
             <div>
-                每期<span style="background-color: yellow;">前30名</span>成功预定<label>VIP摩英大电影+VIP蜕变水晶相册</label>
-                （单阶或双阶套餐）的学员均赠送价值300元的“统一版摩英回忆视频”！
+                成功预定VIP摩英大电影+VIP蜕变水晶相册 （单阶或双阶套餐）的学员均赠送价值300元的“统一版摩英回忆视频”！
                 数量有限，按预定顺序确认发放。
             </div>
-            <div style="line-height: 40px;color: rgb(0, 176, 80);font-size: 18px">
+            <div style="border-radius: 15px;color: #fff;background: red;padding: 5px;font-size: 15px;width: 70%;">
                 详情咨询 400-800-6258
             </div>
-            <div>
-                <label>老学员填表提交时，请务必在备注中注明：我是老学员，上次参加的是第**期集训营。谢谢！</label>
+            <div style="color: #ff3333;">
+                老学员填表提交时，请务必在备注中注明：我是老学员，上次参加的是第**期集训营。谢谢！
             </div>
             <div>
                 备注（填写其他需要校方特别注意的内容）：
-                <textarea id="tellme" style="resize: none;width: 100%;height: 70px;outline: none;"></textarea>
+                <textarea id="tellme"
+                          style="resize: none;width: 100%;height: 80px;outline: none;border-radius: 15px;padding: 3px;background: #eee;"></textarea>
             </div>
             <div class="text-center">
                 <button style="height: 35px;background-color: #cc3333;outline: none;border-radius: 10px;width: 70%;color: #FFF;border: 0;"
@@ -393,9 +370,34 @@
             </div>
         </div>
     </div>
-    <div style="margin-top: 20px" class="row">
-        <img src="../../Images/serviceImg/bottom.jpg"/>
+    <div class="row mgt8">
+        <div class="col-xs-12"><img src="../../Images/serviceImg/bottom.jpg"/></div>
     </div>
+    <div class="row mgt8">
+        <div class="col-xs-12"><img src="../../Images/serviceImg/p_015.jpg"/></div>
+    </div>
+    <div class="row mgt8">
+        <div class="col-xs-12"><img src="../../Images/serviceImg/p_026.jpg"/></div>
+    </div>
+    <div class="row mgt8">
+        <div class="col-xs-12"><img src="../../Images/serviceImg/p_017.jpg"/></div>
+    </div>
+    <div class="row mgt8">
+        <div class="col-xs-12"><img src="../../Images/serviceImg/p_018.jpg"/></div>
+    </div>
+    <div class="row mgt8">
+        <div class="col-xs-12"><img src="../../Images/serviceImg/p_020.jpg"/></div>
+    </div>
+    <div class="row mgt8">
+        <div class="col-xs-12"><img src="../../Images/serviceImg/p_021.jpg"/></div>
+    </div>
+    <div class="row mgt8">
+        <div class="col-xs-12"><img src="../../Images/serviceImg/p_023.jpg"/></div>
+    </div>
+    <div class="row mgt8">
+        <div class="col-xs-12"><img src="../../Images/serviceImg/p_024.jpg"/></div>
+    </div>
+
 </div>
 
 <script src="../../Framework/Jqueryv2.4/jquery.min.js"></script>
