--- a/Views/Admin/Phase/PhaseList.html
+++ b/Views/Admin/Phase/PhaseList.html
@@ -36,9 +36,17 @@
 <div id="header"></div>
 <div style="height: 80px"></div>
 <div class="container">
-    <div class="row" style="padding: 10px;background: #e5e5e5">
+    <div class="row" style="padding: 5px;background: #e5e5e5">
         <div class="col-xs-6 text-left">
             <h4><strong>阶段课程管理</strong></h4>
+        </div>
+    </div>
+    <div class="row" style="padding: 5px;background: #e5e5e5">
+        <div class="col-xs-6 text-left">
+            按年份筛选：
+            <select class="form-control" id="selYear" style="display: inline-block;width: 100px;">
+                <option value="0">全部</option>
+            </select>
         </div>
         <div class="col-xs-6 text-right">
             <!--<input type="text" style="width: 60%" id="SearchKey" placeholder="请输入搜索关键字"/>-->
