解决左右滑动问题

--- a/Views/book/Sign_UnReg.html
+++ b/Views/book/Sign_UnReg.html
@@ -15,7 +15,7 @@
 <body>
 <div id="datePlugin"></div>
 
-<div class="container">
+<div class="container" style="overflow:hidden">
     <div class="row">
         <img src="../../Images/serviceImg/logo.jpg"/>
     </div>
