--- a/Views/book/Sign_UnReg.html
+++ b/Views/book/Sign_UnReg.html
@@ -187,11 +187,11 @@
             <div><label>【特别提醒】</label></div>
             <div>
                 <label>1、新学员报名，</label>
-                <span style="color:#ff0000;">请提前6个月全额汇款，确保名额；</span>
+                <span style="color:#ff0000;">请提前3个月全额汇款，确保名额；</span>
             </div>
             <div>
                 <label>2、老学员确定参加哪一期，</label>
-                <span style="color:#ff0000;">以食宿费汇款到账为准。</span>
+                <span style="color:#ff0000;">以食宿会场费汇款到账为准。</span>
             </div>
         </div>
     </div>
