--- a/Views/book/Sign_wuxi.html
+++ b/Views/book/Sign_wuxi.html
@@ -182,18 +182,33 @@
                 <!--<div style="margin-left: 20px">开始时间:2017-07-24</div>-->
                 <!--<div style="margin-left: 20px">结束时间:2017-07-30</div>-->
             <!--</div>-->
+            <!--<div style="padding: 10px 0">-->
+                <!--<input name="course" type="radio" value="第一期(无锡)亲少年精英特训营"/>&nbsp;第一期(无锡)亲少年精英特训营-->
+                <!--<div style="margin-left: 20px">开始时间:2017-08-02</div>-->
+                <!--<div style="margin-left: 20px">结束时间:2017-08-08</div>-->
+            <!--</div>-->
+            <!--<div style="padding: 10px 0">-->
+                <!--<input name="course" type="radio" value="《音领未来》音标班"/>&nbsp;《音领未来》音标班-->
+                <!--<div style="margin-left: 20px">时间:暑假(7月开课)</div>-->
+            <!--</div>-->
+
             <div style="padding: 10px 0">
-                <input name="course" type="radio" value="第一期(无锡)亲少年精英特训营"/>&nbsp;第一期(无锡)亲少年精英特训营
-                <div style="margin-left: 20px">开始时间:2017-08-02</div>
-                <div style="margin-left: 20px">结束时间:2017-08-08</div>
+                <input name="course" type="radio" value="第二期（无锡）青少年精英特训营"/>&nbsp;第二期（无锡）青少年精英特训营
+                <div style="margin-left: 20px">开始时间：2018-02-08</div>
+                <div style="margin-left: 20px">结束时间：2018-02-14</div>
             </div>
             <div style="padding: 10px 0">
-                <input name="course" type="radio" value="音领未来》音标班"/>&nbsp;《音领未来》音标班
-                <div style="margin-left: 20px">时间:暑假(7月开课)</div>
+                <input name="course" type="radio" value="第一期（无锡）《魅力演说班》"/>&nbsp;第一期（无锡）《魅力演说班》
+                <div style="margin-left: 20px">开始时间：2017-10-05</div>
+                <div style="margin-left: 20px">结束时间：2017-10-08</div>
+            </div>
+            <div style="padding: 10px 0">
+                <input name="course" type="radio" value="《少儿英语精品班》"/>&nbsp;《少儿英语精品班》
+                <div style="margin-left: 20px">开课时间：2017-09-15</div>
             </div>
             <div style="padding: 10px 0">
                 <input name="course" type="radio" value="《高效口语精品班》"/>&nbsp;《高效口语精品班》
-                <div style="margin-left: 20px">时间:暑假</div>
+                <div style="margin-left: 20px">开课时间：2017.10</div>
             </div>
         </div>
     </div>
